# GoogleMLCampProject

./: .gitmodules  CMakeLists.txt  README.md  how_we_deal_with_all_kinds_of_bugs.md  main.cpp
.github/workflows/: codeql.yml
aisegment/: FxxkMethod.py  NaiveMatting.py  TestNaiveMethod.py
on-devive-inference/: CMakeLists.txt  main.cpp
on-devive-inference/simpsonization/: facedetector.hpp  swapper.hpp  transfer.hpp
on-devive-inference/simpsonization/utils/: debug_plot.hpp  speedup.hpp  timer.hpp
shm/: preprocessing.py
simpsonization/: facedetector.hpp
simpsonization/utils/: debug_plot.hpp
sources-1/gpu_server/: style_transfer.py
sources-1/transfer/: package-lock.json  package.json
sources-1/transfer/components/: redraw.js  styledComponent.js
sources-1/transfer/pages/: custom.js  index.js  transfer.js
training/: preprocessing.py
training/matting-unet/: H5OnnxConverter.py  NaiveMatting.py
web-app/src/gpu_server/: gpu_scheduler.py  gpu_server.py  transfer_net.py  utils.py
web-app/src/master_server/: master_server.py
web-app/src/transfer/: next.config.js  now.json  package-lock.json  package.json
web-app/src/transfer/components/: header.js  layout.js  transfer.js
web-app/src/transfer/pages/: _document.js
web-app/src/transfer/static/css/: style.css
web-app/src/transfer/utils/: utils.js
